--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -271,7 +271,7 @@ font_size 12.0
 #: so if you want to override it, place your value after the lines
 #: where the theme file is included.
 
-# cursor_shape block
+cursor_shape beam 
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
@@ -288,24 +288,34 @@ font_size 12.0
 #: The unfocused cursor shape can be one of block, beam, underline,
 #: hollow.
 
-# cursor_beam_thickness 1.5
+cursor_beam_thickness 1.5
 
 #: The thickness of the beam cursor (in pts).
 
-# cursor_underline_thickness 2.0
+cursor_underline_thickness 2.0
 
 #: The thickness of the underline cursor (in pts).
 
-# cursor_blink_interval -1
+cursor_blink_interval 0 
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
 #: that the minimum interval will be limited to repaint_delay.
 
-# cursor_stop_blinking_after 15.0
+cursor_stop_blinking_after 0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity. Set to zero to never stop blinking.
+
+# Set this to a value larger than zero to enable a “cursor trail” animation. This is an animation that shows a “trail” following the movement of the text cursor. It makes it easy to follow large cursor jumps and makes for a cool visual effect of the cursor zooming around the screen. The actual value of this option controls when the animation is triggered. It is a number of milliseconds. The trail animation only follows cursors that have stayed in their position for longer than the specified number of milliseconds. This prevents trails from appearing for cursors that rapidly change their positions during UI updates in complex applications. See cursor_trail_decay to control the animation speed and cursor_trail_start_threshold to control when a cursor trail is started.
+cursor_trail 1
+
+# Controls the decay times for the cursor trail effect when the cursor_trail is enabled. This option accepts two positive float values specifying the fastest and slowest decay times in seconds. The first value corresponds to the fastest decay time (minimum), and the second value corresponds to the slowest decay time (maximum). The second value must be equal to or greater than the first value. Smaller values result in a faster decay of the cursor trail. Adjust these values to control how quickly the cursor trail fades away.
+# cursor_trail_decay 0.1 0.6
+cursor_trail_decay 0.1 0.3
+
+# Set the distance threshold for starting the cursor trail. This option accepts a positive integer value that represents the minimum number of cells the cursor must move before the trail is started. When the cursor moves less than this threshold, the trail is skipped, reducing unnecessary cursor trail animation.
+cursor_trail_start_threshold 2
 
 #: }}}
 
